[package]
name = "crispy-iptv-types"
description = "Protocol-agnostic IPTV domain types and traits"
version = "0.2.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/moabualruz/crispy-iptv-types"
homepage = "https://github.com/moabualruz/crispy-iptv-types"
documentation = "https://docs.rs/crispy-iptv-types"
readme = "README.md"
keywords = ["iptv", "streaming", "m3u", "xmltv", "media"]
categories = ["multimedia", "parser-implementations", "network-programming"]
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
url = "2"
compact_str = { version = "0.8", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
